# Distributed-ML-Training-Platform

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: config.py  main.py
app/api/: jobs.py
app/database/: models.py
app/ml/: simple_model.py
app/services/: redis_client.py
app/tasks/: celery_app.py  training.py
benchmarks/: redis_latency.py
tests/: test_db.py  test_redis.py  test_simple_model.py
tests/load_test/: locustfile.py
