[project]
name = "ml-training-pipeline"
version = "0.1.0"
description = "ML Training Pipeline with Event-Driven Architecture"
authors = [
    {name = "Akash Bhat",email = "quentesia.art@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "rabbitmq (>=0.2.0,<0.3.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "trimesh (>=4.5.5,<5.0.0)",
    "numpy-stl (>=3.1.3,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"

